[package]
name = "glb-to-webgpu"
version = "0.1.0"
edition = "2024"

[dependencies]

bytemuck = { version = "1.5.1", features = ["derive"] }
clap = "2.33"
env_logger = "0.8.3"
itertools = "0.10.0"
nalgebra-glm = "0.13.0"
pollster = "0.2.4"
wgpu = "24.0"
winit = "0.30.9"
gltf = "1.4.1"
log = "0.4.26"
