[package]
name = "glb-to-webgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.5.1", features = ["derive"] }
clap = "2.33"
env_logger = "0.8.3"
itertools = "0.10.0"
nalgebra-glm = "0.13.0"
pollster = "0.2.4"
gltf = "1.4.1"
log = "0.4.26"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
wgpu_native = { version = "0.19", package = "wgpu" }
winit = { version = "0.30.9" }

[target.'cfg(target_arch="wasm32")'.dependencies]
wgpu_wasi = { git = "https://github.com/wasi-gfx/wgpu.git", rev = "97a0972c76dee72151976cce9c282314aa4f5d78", default-features = false, features = ["wasi", "wgsl"], package = "wgpu" }
wasi = { version = "=0.13.1+wasi-0.2.0" }
wit-bindgen = "0.26"
